# NeuralPi

./: .gitignore  .gitmodules  CMakeLists.txt  NeuralPi.jucer  README.md  mac_builds.sh  validate.sh  win_builds.sh
.github/: FUNDING.yml
.github/workflows/: cmake.yml  projucer.yml
3dprint/: HiFiBerry_Case_w_Hole_r2.stl  README.md  RPi_4_Case_Cover_hex.stl  hifiberry_rca_cover.stl
Source/: AmpOSCReceiver.h  CMakeLists.txt  CabSim.h  Delay.h  ModelLoader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RTNeuralGRU.cpp  RTNeuralGRU.h  RTNeuralLSTM.cpp  RTNeuralLSTM.h
elk_configs/: config_neuralpi.json  config_neuralpi_MIDI.json  config_neuralpi_fx.json
installers/linux/: build_deb.sh
installers/mac/: Intro.txt  NeuralPi.pkgproj  build_mac_installer.sh
installers/windows/: NeuralPi_Install_Script.iss  build_win_installer.sh
models/: BluesJR_FullD.json  BluesJr.json  HT40_Overdrive.json  TS9.json  ts9_model_best.json
modules/: CMakeLists.txt
resources/: CMakeLists.txt
scripts/: aax_builds.sh  update_models.bat  update_models.sh
